@@ -319,10 +319,14 @@ bool CPlayListPLS::LoadRAMInfo(CStdString& strData)
 void CPlayListPLS::Save(const CStdString& strFileName) const
 {
   if (!m_vecItems.size()) return ;
-  FILE *fd = fopen(strFileName.c_str(), "w+");
+  CStdString strPlaylist = strFileName;
+  // force HD saved playlists into fatx compliance
+  if (CUtil::IsHD(strPlaylist))
+    CUtil::GetFatXQualifiedPath(strPlaylist);
+  FILE *fd = fopen(strPlaylist.c_str(), "w+");
   if (!fd)
   {
-    CLog::Log(LOGERROR, "Could not save PLS playlist: [%s]", strFileName.c_str());
+    CLog::Log(LOGERROR, "Could not save PLS playlist: [%s]", strPlaylist.c_str());
     return ;
   }
   fprintf(fd, "%s\n", START_PLAYLIST_MARKER);
