@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 24-12-2005 fixed: playlist caching
  - 24-12-2005 fixed: list and textbox spincontrols in python
  - 24-12-2005 added: getshares command to HttpApi
  - 24-12-2005 fixed: Musicdatabase upgrade to 1.4 failed if songs from the same album had different thumbid's.
